Tutorial/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : elementos

   2  elementos : elemento
   3            | elementos elemento

   4  elemento : funcion
   5           | struct
   6           | atributo

   7  funcion : "IDENT" '(' parametros ')' ':' tipo '{' sentencias '}'
   8          | "IDENT" '(' parametros ')' '{' sentencias '}'

   9  parametros : parametro
  10             |

  11  parametro : "IDENT" ':' tipoPrimitivo
  12            | parametro ',' parametro

  13  tipo : tipoPrimitivo
  14       | "IDENT"

  15  tipoPrimitivo : "INT"
  16                | "REAL"
  17                | "CHAR"

  18  array : dimensiones tipo

  19  dimensiones : dimension
  20              | dimensiones dimension

  21  dimension : '[' expresion ']'

  22  struct : "STRUCT" "IDENT" '{' definiciones '}' ';'

  23  atributo : "VAR" definicion

  24  definiciones : definicion
  25               | definiciones definicion

  26  definicion : "IDENT" ':' tipo ';'
  27             | "IDENT" ':' array ';'

  28  sentencias : sentencias sentencia
  29             |

  30  sentencia : "VAR" definicion
  31            | "READ" "IDENT" ';'
  32            | "READ" "IDENT" accesos ';'
  33            | "PRINT" expresion ';'
  34            | "WHILE" '(' expresion ')' '{' sentencias '}'
  35            | "IF" '(' expresion ')' '{' sentencias '}'
  36            | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  37            | "IDENT" '=' expresion ';'
  38            | "IDENT" accesos '=' expresion ';'
  39            | "IDENT" '=' "LITERALCHAR" ';'
  40            | "CAST" '<' tipoPrimitivo '>' '(' expresion ')'
  41            | "RETURN" expresion ';'
  42            | "RETURN" ';'
  43            | invocacionMetodo ';'

  44  expresion : "LITERALINT"
  45            | "LITERALREAL"
  46            | "IDENT"
  47            | expresion '+' expresion
  48            | expresion '-' expresion
  49            | expresion '/' expresion
  50            | expresion '*' expresion
  51            | expresion '<' expresion
  52            | expresion '>' expresion
  53            | expresion '<' '=' expresion
  54            | expresion '>' '=' expresion
  55            | expresion '=' '=' expresion
  56            | expresion '=' expresion
  57            | expresion '!' '=' expresion
  58            | expresion '&' '&' expresion
  59            | expresion '|' '|' expresion
  60            | '!' expresion
  61            | '(' expresion ')'
  62            | "IDENT" accesos
  63            | invocacionMetodo

  64  accesos : acceso
  65          | accesos acceso

  66  acceso : '.' "IDENT"
  67         | '[' expresion ']'

  68  invocacionMetodo : "IDENT" '(' valores ')'

  69  valores : valor
  70          |

  71  valor : expresion
  72        | "CAST" '<' tipoPrimitivo '>' '(' expresion ')'
  73        | valor ',' valor

state 0
	$accept : . programa $end  (0)

	"IDENT"  shift 1
	"STRUCT"  shift 2
	"VAR"  shift 3
	.  error

	programa  goto 4
	elementos  goto 5
	elemento  goto 6
	funcion  goto 7
	struct  goto 8
	atributo  goto 9


state 1
	funcion : "IDENT" . '(' parametros ')' ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" . '(' parametros ')' '{' sentencias '}'  (8)

	'('  shift 10
	.  error


state 2
	struct : "STRUCT" . "IDENT" '{' definiciones '}' ';'  (22)

	"IDENT"  shift 11
	.  error


state 3
	atributo : "VAR" . definicion  (23)

	"IDENT"  shift 12
	.  error

	definicion  goto 13


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : elementos .  (1)
	elementos : elementos . elemento  (3)

	"IDENT"  shift 1
	"STRUCT"  shift 2
	"VAR"  shift 3
	$end  reduce 1

	elemento  goto 14
	funcion  goto 7
	struct  goto 8
	atributo  goto 9


state 6
	elementos : elemento .  (2)

	.  reduce 2


state 7
	elemento : funcion .  (4)

	.  reduce 4


state 8
	elemento : struct .  (5)

	.  reduce 5


state 9
	elemento : atributo .  (6)

	.  reduce 6


state 10
	funcion : "IDENT" '(' . parametros ')' ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" '(' . parametros ')' '{' sentencias '}'  (8)
	parametros : .  (10)

	"IDENT"  shift 15
	')'  reduce 10

	parametros  goto 16
	parametro  goto 17


state 11
	struct : "STRUCT" "IDENT" . '{' definiciones '}' ';'  (22)

	'{'  shift 18
	.  error


state 12
	definicion : "IDENT" . ':' tipo ';'  (26)
	definicion : "IDENT" . ':' array ';'  (27)

	':'  shift 19
	.  error


state 13
	atributo : "VAR" definicion .  (23)

	.  reduce 23


state 14
	elementos : elementos elemento .  (3)

	.  reduce 3


state 15
	parametro : "IDENT" . ':' tipoPrimitivo  (11)

	':'  shift 20
	.  error


state 16
	funcion : "IDENT" '(' parametros . ')' ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" '(' parametros . ')' '{' sentencias '}'  (8)

	')'  shift 21
	.  error


state 17
	parametros : parametro .  (9)
	parametro : parametro . ',' parametro  (12)

	','  shift 22
	')'  reduce 9


state 18
	struct : "STRUCT" "IDENT" '{' . definiciones '}' ';'  (22)

	"IDENT"  shift 12
	.  error

	definiciones  goto 23
	definicion  goto 24


state 19
	definicion : "IDENT" ':' . tipo ';'  (26)
	definicion : "IDENT" ':' . array ';'  (27)

	"IDENT"  shift 25
	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	'['  shift 29
	.  error

	tipo  goto 30
	tipoPrimitivo  goto 31
	array  goto 32
	dimensiones  goto 33
	dimension  goto 34


state 20
	parametro : "IDENT" ':' . tipoPrimitivo  (11)

	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	.  error

	tipoPrimitivo  goto 35


state 21
	funcion : "IDENT" '(' parametros ')' . ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" '(' parametros ')' . '{' sentencias '}'  (8)

	':'  shift 36
	'{'  shift 37
	.  error


state 22
	parametro : parametro ',' . parametro  (12)

	"IDENT"  shift 15
	.  error

	parametro  goto 38


state 23
	struct : "STRUCT" "IDENT" '{' definiciones . '}' ';'  (22)
	definiciones : definiciones . definicion  (25)

	"IDENT"  shift 12
	'}'  shift 39
	.  error

	definicion  goto 40


state 24
	definiciones : definicion .  (24)

	.  reduce 24


state 25
	tipo : "IDENT" .  (14)

	.  reduce 14


state 26
	tipoPrimitivo : "INT" .  (15)

	.  reduce 15


state 27
	tipoPrimitivo : "REAL" .  (16)

	.  reduce 16


state 28
	tipoPrimitivo : "CHAR" .  (17)

	.  reduce 17


state 29
	dimension : '[' . expresion ']'  (21)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 46
	invocacionMetodo  goto 47


state 30
	definicion : "IDENT" ':' tipo . ';'  (26)

	';'  shift 48
	.  error


state 31
	tipo : tipoPrimitivo .  (13)

	.  reduce 13


state 32
	definicion : "IDENT" ':' array . ';'  (27)

	';'  shift 49
	.  error


state 33
	array : dimensiones . tipo  (18)
	dimensiones : dimensiones . dimension  (20)

	"IDENT"  shift 25
	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	'['  shift 29
	.  error

	tipo  goto 50
	tipoPrimitivo  goto 31
	dimension  goto 51


state 34
	dimensiones : dimension .  (19)

	.  reduce 19


state 35
	parametro : "IDENT" ':' tipoPrimitivo .  (11)

	.  reduce 11


state 36
	funcion : "IDENT" '(' parametros ')' ':' . tipo '{' sentencias '}'  (7)

	"IDENT"  shift 25
	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	.  error

	tipo  goto 52
	tipoPrimitivo  goto 31


state 37
	funcion : "IDENT" '(' parametros ')' '{' . sentencias '}'  (8)
	sentencias : .  (29)

	.  reduce 29

	sentencias  goto 53


state 38
	parametro : parametro . ',' parametro  (12)
	parametro : parametro ',' parametro .  (12)

	.  reduce 12


state 39
	struct : "STRUCT" "IDENT" '{' definiciones '}' . ';'  (22)

	';'  shift 54
	.  error


state 40
	definiciones : definiciones definicion .  (25)

	.  reduce 25


state 41
	expresion : '!' . expresion  (60)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 55
	invocacionMetodo  goto 47


state 42
	expresion : "IDENT" .  (46)
	expresion : "IDENT" . accesos  (62)
	invocacionMetodo : "IDENT" . '(' valores ')'  (68)

	'('  shift 56
	'['  shift 57
	'.'  shift 58
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	','  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	'='  reduce 46
	'&'  reduce 46
	'|'  reduce 46
	'!'  reduce 46
	')'  reduce 46
	']'  reduce 46
	';'  reduce 46

	accesos  goto 59
	acceso  goto 60


state 43
	expresion : '(' . expresion ')'  (61)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 61
	invocacionMetodo  goto 47


state 44
	expresion : "LITERALINT" .  (44)

	.  reduce 44


state 45
	expresion : "LITERALREAL" .  (45)

	.  reduce 45


state 46
	dimension : '[' expresion . ']'  (21)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	']'  shift 72
	.  error


state 47
	expresion : invocacionMetodo .  (63)

	.  reduce 63


state 48
	definicion : "IDENT" ':' tipo ';' .  (26)

	.  reduce 26


state 49
	definicion : "IDENT" ':' array ';' .  (27)

	.  reduce 27


state 50
	array : dimensiones tipo .  (18)

	.  reduce 18


state 51
	dimensiones : dimensiones dimension .  (20)

	.  reduce 20


state 52
	funcion : "IDENT" '(' parametros ')' ':' tipo . '{' sentencias '}'  (7)

	'{'  shift 73
	.  error


state 53
	funcion : "IDENT" '(' parametros ')' '{' sentencias . '}'  (8)
	sentencias : sentencias . sentencia  (28)

	"IDENT"  shift 74
	'}'  shift 75
	"VAR"  shift 76
	"READ"  shift 77
	"PRINT"  shift 78
	"WHILE"  shift 79
	"IF"  shift 80
	"CAST"  shift 81
	"RETURN"  shift 82
	.  error

	sentencia  goto 83
	invocacionMetodo  goto 84


state 54
	struct : "STRUCT" "IDENT" '{' definiciones '}' ';' .  (22)

	.  reduce 22


state 55
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	expresion : '!' expresion .  (60)

	.  reduce 60


state 56
	invocacionMetodo : "IDENT" '(' . valores ')'  (68)
	valores : .  (70)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"CAST"  shift 85
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	')'  reduce 70

	expresion  goto 86
	invocacionMetodo  goto 47
	valores  goto 87
	valor  goto 88


state 57
	acceso : '[' . expresion ']'  (67)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 89
	invocacionMetodo  goto 47


state 58
	acceso : '.' . "IDENT"  (66)

	"IDENT"  shift 90
	.  error


state 59
	expresion : "IDENT" accesos .  (62)
	accesos : accesos . acceso  (65)

	'['  shift 57
	'.'  shift 58
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	','  reduce 62
	'<'  reduce 62
	'>'  reduce 62
	'='  reduce 62
	'&'  reduce 62
	'|'  reduce 62
	'!'  reduce 62
	')'  reduce 62
	']'  reduce 62
	';'  reduce 62

	acceso  goto 91


state 60
	accesos : acceso .  (64)

	.  reduce 64


state 61
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	expresion : '(' expresion . ')'  (61)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	')'  shift 92
	.  error


state 62
	expresion : expresion '+' . expresion  (47)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 93
	invocacionMetodo  goto 47


state 63
	expresion : expresion '-' . expresion  (48)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 94
	invocacionMetodo  goto 47


state 64
	expresion : expresion '*' . expresion  (50)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 95
	invocacionMetodo  goto 47


state 65
	expresion : expresion '/' . expresion  (49)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 96
	invocacionMetodo  goto 47


state 66
	expresion : expresion '<' . expresion  (51)
	expresion : expresion '<' . '=' expresion  (53)

	'='  shift 97
	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 98
	invocacionMetodo  goto 47


state 67
	expresion : expresion '>' . expresion  (52)
	expresion : expresion '>' . '=' expresion  (54)

	'='  shift 99
	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 100
	invocacionMetodo  goto 47


state 68
	expresion : expresion '=' . '=' expresion  (55)
	expresion : expresion '=' . expresion  (56)

	'='  shift 101
	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 102
	invocacionMetodo  goto 47


state 69
	expresion : expresion '&' . '&' expresion  (58)

	'&'  shift 103
	.  error


state 70
	expresion : expresion '|' . '|' expresion  (59)

	'|'  shift 104
	.  error


state 71
	expresion : expresion '!' . '=' expresion  (57)

	'='  shift 105
	.  error


state 72
	dimension : '[' expresion ']' .  (21)

	.  reduce 21


state 73
	funcion : "IDENT" '(' parametros ')' ':' tipo '{' . sentencias '}'  (7)
	sentencias : .  (29)

	.  reduce 29

	sentencias  goto 106


state 74
	sentencia : "IDENT" . '=' expresion ';'  (37)
	sentencia : "IDENT" . accesos '=' expresion ';'  (38)
	sentencia : "IDENT" . '=' "LITERALCHAR" ';'  (39)
	invocacionMetodo : "IDENT" . '(' valores ')'  (68)

	'='  shift 107
	'('  shift 56
	'['  shift 57
	'.'  shift 58
	.  error

	accesos  goto 108
	acceso  goto 60


state 75
	funcion : "IDENT" '(' parametros ')' '{' sentencias '}' .  (8)

	.  reduce 8


state 76
	sentencia : "VAR" . definicion  (30)

	"IDENT"  shift 12
	.  error

	definicion  goto 109


state 77
	sentencia : "READ" . "IDENT" ';'  (31)
	sentencia : "READ" . "IDENT" accesos ';'  (32)

	"IDENT"  shift 110
	.  error


state 78
	sentencia : "PRINT" . expresion ';'  (33)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 111
	invocacionMetodo  goto 47


state 79
	sentencia : "WHILE" . '(' expresion ')' '{' sentencias '}'  (34)

	'('  shift 112
	.  error


state 80
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}'  (35)
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)

	'('  shift 113
	.  error


state 81
	sentencia : "CAST" . '<' tipoPrimitivo '>' '(' expresion ')'  (40)

	'<'  shift 114
	.  error


state 82
	sentencia : "RETURN" . expresion ';'  (41)
	sentencia : "RETURN" . ';'  (42)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	';'  shift 115
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 116
	invocacionMetodo  goto 47


state 83
	sentencias : sentencias sentencia .  (28)

	.  reduce 28


state 84
	sentencia : invocacionMetodo . ';'  (43)

	';'  shift 117
	.  error


state 85
	valor : "CAST" . '<' tipoPrimitivo '>' '(' expresion ')'  (72)

	'<'  shift 118
	.  error


state 86
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	valor : expresion .  (71)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	','  reduce 71
	')'  reduce 71


state 87
	invocacionMetodo : "IDENT" '(' valores . ')'  (68)

	')'  shift 119
	.  error


state 88
	valores : valor .  (69)
	valor : valor . ',' valor  (73)

	','  shift 120
	')'  reduce 69


state 89
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	acceso : '[' expresion . ']'  (67)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	']'  shift 121
	.  error


state 90
	acceso : '.' "IDENT" .  (66)

	.  reduce 66


state 91
	accesos : accesos acceso .  (65)

	.  reduce 65


state 92
	expresion : '(' expresion ')' .  (61)

	.  reduce 61


state 93
	expresion : expresion . '+' expresion  (47)
	expresion : expresion '+' expresion .  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'*'  shift 64
	'/'  shift 65
	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 47
	'-'  reduce 47
	','  reduce 47
	')'  reduce 47
	']'  reduce 47
	';'  reduce 47


state 94
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion '-' expresion .  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'*'  shift 64
	'/'  shift 65
	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 48
	'-'  reduce 48
	','  reduce 48
	')'  reduce 48
	']'  reduce 48
	';'  reduce 48


state 95
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion '*' expresion .  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 50
	'-'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	','  reduce 50
	')'  reduce 50
	']'  reduce 50
	';'  reduce 50


state 96
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion '/' expresion .  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	','  reduce 49
	')'  reduce 49
	']'  reduce 49
	';'  reduce 49


state 97
	expresion : expresion '<' '=' . expresion  (53)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 122
	invocacionMetodo  goto 47


state 98
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion '<' expresion .  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	','  reduce 51
	')'  reduce 51
	']'  reduce 51
	';'  reduce 51


state 99
	expresion : expresion '>' '=' . expresion  (54)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 123
	invocacionMetodo  goto 47


state 100
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion '>' expresion .  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	','  reduce 52
	')'  reduce 52
	']'  reduce 52
	';'  reduce 52


state 101
	expresion : expresion '=' '=' . expresion  (55)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 124
	invocacionMetodo  goto 47


state 102
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion '=' expresion .  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'<'  shift 66
	'>'  shift 67
	'='  shift 68
	'&'  shift 69
	'|'  shift 70
	'!'  shift 71
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	','  reduce 56
	')'  reduce 56
	']'  reduce 56
	';'  reduce 56


state 103
	expresion : expresion '&' '&' . expresion  (58)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 125
	invocacionMetodo  goto 47


state 104
	expresion : expresion '|' '|' . expresion  (59)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 126
	invocacionMetodo  goto 47


state 105
	expresion : expresion '!' '=' . expresion  (57)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 127
	invocacionMetodo  goto 47


state 106
	funcion : "IDENT" '(' parametros ')' ':' tipo '{' sentencias . '}'  (7)
	sentencias : sentencias . sentencia  (28)

	"IDENT"  shift 74
	'}'  shift 128
	"VAR"  shift 76
	"READ"  shift 77
	"PRINT"  shift 78
	"WHILE"  shift 79
	"IF"  shift 80
	"CAST"  shift 81
	"RETURN"  shift 82
	.  error

	sentencia  goto 83
	invocacionMetodo  goto 84


state 107
	sentencia : "IDENT" '=' . expresion ';'  (37)
	sentencia : "IDENT" '=' . "LITERALCHAR" ';'  (39)

	'!'  shift 41
	"IDENT"  shift 42
	'('  shift 43
	"LITERALCHAR"  shift 129
	"LITERALINT"  shift 44
	"LITERALREAL"  shift 45
	.  error

	expresion  goto 130
	invocacionMetodo  goto 47


state 108
	sentencia : "IDENT" accesos . '=' expresion ';'  (38)
	accesos : accesos . acceso  (65)

	'='  shift 131
	'['  shift 57
	'.'  shift 58
	.  error

	acceso  goto 91


state 109
	sentencia : "VAR" definicion .  (30)

	.  reduce 30


state 110
	sentencia : "READ" "IDENT" . ';'  (31)
	sentencia : "READ" "IDENT" . accesos ';'  (32)

	'['  shift 57
	';'  shift 132
	'.'  shift 58
	.  error

	accesos  goto 133
	acceso  goto 60


state 111
	sentencia : "PRINT" expresion . ';'  (33)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
